tests/NormalTests/paczka1/small_fuzzy/11058928.err
Error in line 2: qoTAc7PnR S127 91,0
Error in line 10: S127 A310 51,24
